--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,18 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>caffeine.ai - The Future of Caffeination</title>
+    <title>c[_]affeine.ai - The Future of Caffeination</title>
     <link rel="stylesheet" href="index.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
-        <h1>caffeine.ai</h1>
+        <h1>c[_]affeine.ai</h1>
         <p>The Future of Caffeination</p>
     </header>
     <main>
         <section id="intro">
             <h2>Welcome to the Cutting Edge of Coffee Technology</h2>
-            <p>At caffeine.ai, we've revolutionized the way you consume caffeine. Our AI-powered coffee solutions will change your life, one sip at a time.</p>
+            <p>At c[_]affeine.ai, we've revolutionized the way you consume caffeine. Our AI-powered coffee solutions will change your life, one sip at a time.</p>
         </section>
         <section id="features">
             <h2>Our Groundbreaking Features</h2>
@@ -32,7 +33,7 @@
         <section id="testimonial">
             <h2>What Our Customers Are Saying</h2>
             <blockquote>
-                "Before caffeine.ai, I was just a regular human. Now, I'm a hyper-productive cyborg who can see through time. Thanks, caffeine.ai!" - Definitely Not A Robot
+                "Before c[_]affeine.ai, I was just a regular human. Now, I'm a hyper-productive cyborg who can see through time. Thanks, c[_]affeine.ai!" - Definitely Not A Robot
             </blockquote>
         </section>
         <section id="iframe-section">
@@ -41,7 +42,7 @@
         </section>
     </main>
     <footer>
-        <p>© 2023 caffeine.ai - Fueling the Future, One Cup at a Time</p>
+        <p>© 2023 c[_]affeine.ai - Fueling the Future, One Cup at a Time</p>
     </footer>
     <script type="module" src="index.js"></script>
 </body>
